@@ -1518,3 +1518,21 @@ MRREVIEWER = {Attila Nagy},
   year={2021},
   publisher={Springer}
 }
+
+@misc{komatsu,
+  doi = {10.48550/ARXIV.2111.11021},
+  
+  url = {https://arxiv.org/abs/2111.11021},
+  
+  author = {Komatsu, Takao},
+  
+  keywords = {Number Theory (math.NT), Combinatorics (math.CO), FOS: Mathematics, FOS: Mathematics, 11D07, 05A15, 05A17, 05A19, 11B68, 11D04, 11P81},
+  
+  title = {On $p$-Frobenius and related numbers due to $p$-Apéry set},
+  
+  publisher = {arXiv},
+  
+  year = {2021},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
