@@ -4,6 +4,7 @@
 
 #======
 1.3.0 -> 1.3.0 dev
+- Added DenumerantIdeal
 - Remove IsRectangularTable as filter 
 - Added IsUniversallyFreeNumericalSemigroup
 - BinomialIdealOfNumericalSemigroup
